--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/microservices": "^10.4.15",
+    "@nestjs/mongoose": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "amqplib": "^0.10.5",
     "dotenv": "^16.4.7",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.5",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "smpp": "^0.6.0-rc.4"
